--- a/public/css/index.css
+++ b/public/css/index.css
@@ -456,7 +456,7 @@ textarea:hover {
 
 body {
   font-family: "Noto Sans", sans-serif;
-  background-image: url('../imgs/bg.avif');
+  background-image: url('../imgs/blog/bg.avif');
   /* background-color: blue; */
   background-position: center;
   background-repeat: no-repeat;
