--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1772,6 +1772,64 @@ input:-webkit-autofill:active{
 
 /*
 |------------------------------------------------------------
+| Single Report
+|------------------------------------------------------------
+*/
+
+.report-single {
+  background-color: var(--panel-bg);
+  margin-bottom: 2px;
+  padding: .6rem 1rem;
+  min-height: 87vh;
+}
+
+.report-single a:hover {
+  text-decoration: underline;
+}
+
+.report-single > .title {
+  display: flex;
+  justify-content: center;
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: .5rem;
+}
+
+.report-single > .report-flex {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid white;
+  border-bottom: none;
+}
+
+.report-single > .report-flex > div {
+  width: 100%;
+  display: flex;
+  border-bottom: 1px solid white;
+}
+
+.report-single > .report-flex > div:nth-child(odd) {
+  background-color: var(--panel-h);
+}
+
+.report-single > .report-flex > div > div {
+  width: 50%;
+  padding: .2rem .4rem;
+}
+
+.report-single > .report-flex > div > div:first-child {
+  border-right: 1px solid white;
+}
+
+.report-single > .report-flex > .link {
+  display: flex;
+  padding: .2rem .4rem;
+  justify-content: center;
+}
+
+/*
+|------------------------------------------------------------
 | Search
 |------------------------------------------------------------
 */
