--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1828,6 +1828,70 @@ input:-webkit-autofill:active{
   justify-content: center;
 }
 
+.report-single .btn:not(span) {
+  border: 1px solid white;
+  padding: .3rem .7rem;
+  margin-top: 1rem;
+  width: 100%;
+  text-align: center;
+}
+
+.report-single > .review {
+  position: fixed;
+  left: 50%;
+  top: 15%;
+  transform: translateX(-50%);
+  background-color: black;
+  border: 1px solid white;
+  padding: 1.2rem .8rem .8rem .8rem;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity .2s ease-in-out;
+  font-size: 1.2rem;
+}
+
+.report-single > .review > span {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.report-single > .review > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: .3rem;
+  text-wrap: nowrap;
+  padding: .1rem 0;
+}
+
+.report-single > .review > div > input[type=checkbox] {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 1rem;
+  height: 1rem;
+  background-color: white;
+  cursor: pointer;
+}
+
+.report-single > .review > div > input[type=checkbox]:checked {
+  background-color: red;
+}
+
+.report-single > .review > hr {
+  background-color: white;
+  width: 100%;
+  margin: .8rem 0;
+}
+
+.report-single > .review > label {
+  font-size: 1.1rem;
+}
+
+.report-single > .review > input[type='text'] {
+  padding: .2rem .4rem;
+}
+
 /*
 |------------------------------------------------------------
 | Search
