--- a/public/css/index.css
+++ b/public/css/index.css
@@ -424,6 +424,7 @@ textarea:hover {
   cursor: pointer;
   transform-origin: center;
   user-select: none;
+  transition: all .05s ease-in-out;
 }
 
 .btn:hover {
@@ -694,9 +695,9 @@ header {
 }
 
 .index > .post > .post-container .body {
-  margin-bottom: .5rem;
   text-align: left;
   width: min(100%, 600px);
+  margin: 0rem auto .5rem auto;
 }
 
 .index > .post *:not(.body, .body *) {
@@ -2465,6 +2466,9 @@ footer a:hover {
   :root {
     font-size: 18px;
   }
+  .report-form {
+    font-size: 1.15rem;
+  }
   .page-title {
     font-size: 1.6rem;
   }
@@ -2512,6 +2516,9 @@ footer a:hover {
     gap: 1.2rem;
     padding: .7rem;
   }
+  .index > .post > .menu > .dropdown {
+    font-size: 1rem;
+  }
   .index > .post > .post-container .body {
     text-align: left;
     margin: .3rem auto .7rem auto;
@@ -2536,7 +2543,7 @@ footer a:hover {
     margin-bottom: 0;
   }
   .continue {
-    font-size: .7rem;
+    font-size: .8rem;
   }
   .index .comment-count span {
     font-size: 1.6rem;
